parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> statement
Rule 2     statement -> print_stmt FINISH statement
Rule 3     statement -> register_stmt FINISH statement
Rule 4     statement -> condition_stmt statement
Rule 5     statement -> for_stmt statement
Rule 6     statement -> while_stmt statement
Rule 7     statement -> empty
Rule 8     expression -> expression AND expression
Rule 9     expression -> expression OR expression
Rule 10    expression -> expression PLUS expression
Rule 11    expression -> expression MINUS expression
Rule 12    expression -> expression MULT expression
Rule 13    expression -> expression DIV expression
Rule 14    expression -> expression EXP expression
Rule 15    expression -> expression EQUALS expression
Rule 16    expression -> expression NOT_EQUALS expression
Rule 17    expression -> expression EQ_MORE expression
Rule 18    expression -> expression EQ_LESS expression
Rule 19    expression -> expression MORE expression
Rule 20    expression -> expression LESS expression
Rule 21    expression -> ID
Rule 22    expression -> FLOAT_VAL
Rule 23    expression -> INT_VAL
Rule 24    expression -> STR_VAL
Rule 25    expression -> bool_val
Rule 26    bool_val -> TRUE
Rule 27    bool_val -> FALSE
Rule 28    expression -> LPAREN expression RPAREN
Rule 29    expression -> MINUS expression
Rule 30    print_stmt -> PRINT expression
Rule 31    register_stmt -> declare_reg
Rule 32    register_stmt -> declare_assign_reg
Rule 33    register_stmt -> assign_reg
Rule 34    condition_stmt -> if_cond elif_cond else_cond
Rule 35    for_stmt -> FOR LPAREN declare_assign_reg FINISH expression FINISH assign_reg RPAREN LKEY statement RKEY
Rule 36    while_stmt -> WHILE LPAREN expression RPAREN LKEY statement RKEY
Rule 37    while_stmt -> DO LKEY statement RKEY WHILE LPAREN expression RPAREN FINISH
Rule 38    empty -> <empty>
Rule 39    type -> BOOL
Rule 40    type -> INT
Rule 41    type -> FLOAT
Rule 42    type -> STRING
Rule 43    declare_reg -> type ID
Rule 44    declare_assign_reg -> type ID ASSIGN expression
Rule 45    assign_reg -> ID ASSIGN expression
Rule 46    if_cond -> IF LPAREN expression RPAREN LKEY statement RKEY
Rule 47    elif_cond -> ELIF LPAREN expression RPAREN LKEY statement RKEY elif_cond
Rule 48    elif_cond -> empty
Rule 49    else_cond -> ELSE LKEY statement RKEY
Rule 50    else_cond -> empty

Terminals, with rules where they appear

AND                  : 8
ASSIGN               : 44 45
BOOL                 : 39
DIV                  : 13
DO                   : 37
ELIF                 : 47
ELSE                 : 49
EQUALS               : 15
EQ_LESS              : 18
EQ_MORE              : 17
EXP                  : 14
FALSE                : 27
FINISH               : 2 3 35 35 37
FLOAT                : 41
FLOAT_VAL            : 22
FOR                  : 35
ID                   : 21 43 44 45
IF                   : 46
INT                  : 40
INT_VAL              : 23
LESS                 : 20
LKEY                 : 35 36 37 46 47 49
LPAREN               : 28 35 36 37 46 47
MINUS                : 11 29
MORE                 : 19
MULT                 : 12
NOT_EQUALS           : 16
OR                   : 9
PLUS                 : 10
PRINT                : 30
RKEY                 : 35 36 37 46 47 49
RPAREN               : 28 35 36 37 46 47
STRING               : 42
STR_VAL              : 24
TRUE                 : 26
WHILE                : 36 37
error                : 

Nonterminals, with rules where they appear

assign_reg           : 33 35
bool_val             : 25
condition_stmt       : 4
declare_assign_reg   : 32 35
declare_reg          : 31
elif_cond            : 34 47
else_cond            : 34
empty                : 7 48 50
expression           : 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 28 29 30 35 36 37 44 45 46 47
for_stmt             : 5
if_cond              : 34
print_stmt           : 2
register_stmt        : 3
start                : 0
statement            : 1 2 3 4 5 6 35 36 37 46 47 49
type                 : 43 44
while_stmt           : 6

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statement
    (2) statement -> . print_stmt FINISH statement
    (3) statement -> . register_stmt FINISH statement
    (4) statement -> . condition_stmt statement
    (5) statement -> . for_stmt statement
    (6) statement -> . while_stmt statement
    (7) statement -> . empty
    (30) print_stmt -> . PRINT expression
    (31) register_stmt -> . declare_reg
    (32) register_stmt -> . declare_assign_reg
    (33) register_stmt -> . assign_reg
    (34) condition_stmt -> . if_cond elif_cond else_cond
    (35) for_stmt -> . FOR LPAREN declare_assign_reg FINISH expression FINISH assign_reg RPAREN LKEY statement RKEY
    (36) while_stmt -> . WHILE LPAREN expression RPAREN LKEY statement RKEY
    (37) while_stmt -> . DO LKEY statement RKEY WHILE LPAREN expression RPAREN FINISH
    (38) empty -> .
    (43) declare_reg -> . type ID
    (44) declare_assign_reg -> . type ID ASSIGN expression
    (45) assign_reg -> . ID ASSIGN expression
    (46) if_cond -> . IF LPAREN expression RPAREN LKEY statement RKEY
    (39) type -> . BOOL
    (40) type -> . INT
    (41) type -> . FLOAT
    (42) type -> . STRING

    PRINT           shift and go to state 9
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    DO              shift and go to state 16
    $end            reduce using rule 38 (empty -> .)
    ID              shift and go to state 18
    IF              shift and go to state 19
    BOOL            shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    STRING          shift and go to state 23

    start                          shift and go to state 1
    statement                      shift and go to state 2
    print_stmt                     shift and go to state 3
    register_stmt                  shift and go to state 4
    condition_stmt                 shift and go to state 5
    for_stmt                       shift and go to state 6
    while_stmt                     shift and go to state 7
    empty                          shift and go to state 8
    declare_reg                    shift and go to state 10
    declare_assign_reg             shift and go to state 11
    assign_reg                     shift and go to state 12
    if_cond                        shift and go to state 13
    type                           shift and go to state 17

state 1

    (0) S' -> start .



state 2

    (1) start -> statement .

    $end            reduce using rule 1 (start -> statement .)


state 3

    (2) statement -> print_stmt . FINISH statement

    FINISH          shift and go to state 24


state 4

    (3) statement -> register_stmt . FINISH statement

    FINISH          shift and go to state 25


state 5

    (4) statement -> condition_stmt . statement
    (2) statement -> . print_stmt FINISH statement
    (3) statement -> . register_stmt FINISH statement
    (4) statement -> . condition_stmt statement
    (5) statement -> . for_stmt statement
    (6) statement -> . while_stmt statement
    (7) statement -> . empty
    (30) print_stmt -> . PRINT expression
    (31) register_stmt -> . declare_reg
    (32) register_stmt -> . declare_assign_reg
    (33) register_stmt -> . assign_reg
    (34) condition_stmt -> . if_cond elif_cond else_cond
    (35) for_stmt -> . FOR LPAREN declare_assign_reg FINISH expression FINISH assign_reg RPAREN LKEY statement RKEY
    (36) while_stmt -> . WHILE LPAREN expression RPAREN LKEY statement RKEY
    (37) while_stmt -> . DO LKEY statement RKEY WHILE LPAREN expression RPAREN FINISH
    (38) empty -> .
    (43) declare_reg -> . type ID
    (44) declare_assign_reg -> . type ID ASSIGN expression
    (45) assign_reg -> . ID ASSIGN expression
    (46) if_cond -> . IF LPAREN expression RPAREN LKEY statement RKEY
    (39) type -> . BOOL
    (40) type -> . INT
    (41) type -> . FLOAT
    (42) type -> . STRING

    PRINT           shift and go to state 9
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    DO              shift and go to state 16
    $end            reduce using rule 38 (empty -> .)
    RKEY            reduce using rule 38 (empty -> .)
    ID              shift and go to state 18
    IF              shift and go to state 19
    BOOL            shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    STRING          shift and go to state 23

    condition_stmt                 shift and go to state 5
    statement                      shift and go to state 26
    print_stmt                     shift and go to state 3
    register_stmt                  shift and go to state 4
    for_stmt                       shift and go to state 6
    while_stmt                     shift and go to state 7
    empty                          shift and go to state 8
    declare_reg                    shift and go to state 10
    declare_assign_reg             shift and go to state 11
    assign_reg                     shift and go to state 12
    if_cond                        shift and go to state 13
    type                           shift and go to state 17

state 6

    (5) statement -> for_stmt . statement
    (2) statement -> . print_stmt FINISH statement
    (3) statement -> . register_stmt FINISH statement
    (4) statement -> . condition_stmt statement
    (5) statement -> . for_stmt statement
    (6) statement -> . while_stmt statement
    (7) statement -> . empty
    (30) print_stmt -> . PRINT expression
    (31) register_stmt -> . declare_reg
    (32) register_stmt -> . declare_assign_reg
    (33) register_stmt -> . assign_reg
    (34) condition_stmt -> . if_cond elif_cond else_cond
    (35) for_stmt -> . FOR LPAREN declare_assign_reg FINISH expression FINISH assign_reg RPAREN LKEY statement RKEY
    (36) while_stmt -> . WHILE LPAREN expression RPAREN LKEY statement RKEY
    (37) while_stmt -> . DO LKEY statement RKEY WHILE LPAREN expression RPAREN FINISH
    (38) empty -> .
    (43) declare_reg -> . type ID
    (44) declare_assign_reg -> . type ID ASSIGN expression
    (45) assign_reg -> . ID ASSIGN expression
    (46) if_cond -> . IF LPAREN expression RPAREN LKEY statement RKEY
    (39) type -> . BOOL
    (40) type -> . INT
    (41) type -> . FLOAT
    (42) type -> . STRING

    PRINT           shift and go to state 9
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    DO              shift and go to state 16
    $end            reduce using rule 38 (empty -> .)
    RKEY            reduce using rule 38 (empty -> .)
    ID              shift and go to state 18
    IF              shift and go to state 19
    BOOL            shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    STRING          shift and go to state 23

    for_stmt                       shift and go to state 6
    statement                      shift and go to state 27
    print_stmt                     shift and go to state 3
    register_stmt                  shift and go to state 4
    condition_stmt                 shift and go to state 5
    while_stmt                     shift and go to state 7
    empty                          shift and go to state 8
    declare_reg                    shift and go to state 10
    declare_assign_reg             shift and go to state 11
    assign_reg                     shift and go to state 12
    if_cond                        shift and go to state 13
    type                           shift and go to state 17

state 7

    (6) statement -> while_stmt . statement
    (2) statement -> . print_stmt FINISH statement
    (3) statement -> . register_stmt FINISH statement
    (4) statement -> . condition_stmt statement
    (5) statement -> . for_stmt statement
    (6) statement -> . while_stmt statement
    (7) statement -> . empty
    (30) print_stmt -> . PRINT expression
    (31) register_stmt -> . declare_reg
    (32) register_stmt -> . declare_assign_reg
    (33) register_stmt -> . assign_reg
    (34) condition_stmt -> . if_cond elif_cond else_cond
    (35) for_stmt -> . FOR LPAREN declare_assign_reg FINISH expression FINISH assign_reg RPAREN LKEY statement RKEY
    (36) while_stmt -> . WHILE LPAREN expression RPAREN LKEY statement RKEY
    (37) while_stmt -> . DO LKEY statement RKEY WHILE LPAREN expression RPAREN FINISH
    (38) empty -> .
    (43) declare_reg -> . type ID
    (44) declare_assign_reg -> . type ID ASSIGN expression
    (45) assign_reg -> . ID ASSIGN expression
    (46) if_cond -> . IF LPAREN expression RPAREN LKEY statement RKEY
    (39) type -> . BOOL
    (40) type -> . INT
    (41) type -> . FLOAT
    (42) type -> . STRING

    PRINT           shift and go to state 9
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    DO              shift and go to state 16
    $end            reduce using rule 38 (empty -> .)
    RKEY            reduce using rule 38 (empty -> .)
    ID              shift and go to state 18
    IF              shift and go to state 19
    BOOL            shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    STRING          shift and go to state 23

    while_stmt                     shift and go to state 7
    statement                      shift and go to state 28
    print_stmt                     shift and go to state 3
    register_stmt                  shift and go to state 4
    condition_stmt                 shift and go to state 5
    for_stmt                       shift and go to state 6
    empty                          shift and go to state 8
    declare_reg                    shift and go to state 10
    declare_assign_reg             shift and go to state 11
    assign_reg                     shift and go to state 12
    if_cond                        shift and go to state 13
    type                           shift and go to state 17

state 8

    (7) statement -> empty .

    $end            reduce using rule 7 (statement -> empty .)
    RKEY            reduce using rule 7 (statement -> empty .)


state 9

    (30) print_stmt -> PRINT . expression
    (8) expression -> . expression AND expression
    (9) expression -> . expression OR expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression MULT expression
    (13) expression -> . expression DIV expression
    (14) expression -> . expression EXP expression
    (15) expression -> . expression EQUALS expression
    (16) expression -> . expression NOT_EQUALS expression
    (17) expression -> . expression EQ_MORE expression
    (18) expression -> . expression EQ_LESS expression
    (19) expression -> . expression MORE expression
    (20) expression -> . expression LESS expression
    (21) expression -> . ID
    (22) expression -> . FLOAT_VAL
    (23) expression -> . INT_VAL
    (24) expression -> . STR_VAL
    (25) expression -> . bool_val
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . MINUS expression
    (26) bool_val -> . TRUE
    (27) bool_val -> . FALSE

    ID              shift and go to state 31
    FLOAT_VAL       shift and go to state 32
    INT_VAL         shift and go to state 33
    STR_VAL         shift and go to state 34
    LPAREN          shift and go to state 36
    MINUS           shift and go to state 30
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 29
    bool_val                       shift and go to state 35

state 10

    (31) register_stmt -> declare_reg .

    FINISH          reduce using rule 31 (register_stmt -> declare_reg .)


state 11

    (32) register_stmt -> declare_assign_reg .

    FINISH          reduce using rule 32 (register_stmt -> declare_assign_reg .)


state 12

    (33) register_stmt -> assign_reg .

    FINISH          reduce using rule 33 (register_stmt -> assign_reg .)


state 13

    (34) condition_stmt -> if_cond . elif_cond else_cond
    (47) elif_cond -> . ELIF LPAREN expression RPAREN LKEY statement RKEY elif_cond
    (48) elif_cond -> . empty
    (38) empty -> .

    ELIF            shift and go to state 40
    ELSE            reduce using rule 38 (empty -> .)
    PRINT           reduce using rule 38 (empty -> .)
    FOR             reduce using rule 38 (empty -> .)
    WHILE           reduce using rule 38 (empty -> .)
    DO              reduce using rule 38 (empty -> .)
    ID              reduce using rule 38 (empty -> .)
    IF              reduce using rule 38 (empty -> .)
    BOOL            reduce using rule 38 (empty -> .)
    INT             reduce using rule 38 (empty -> .)
    FLOAT           reduce using rule 38 (empty -> .)
    STRING          reduce using rule 38 (empty -> .)
    $end            reduce using rule 38 (empty -> .)
    RKEY            reduce using rule 38 (empty -> .)

    elif_cond                      shift and go to state 39
    empty                          shift and go to state 41

state 14

    (35) for_stmt -> FOR . LPAREN declare_assign_reg FINISH expression FINISH assign_reg RPAREN LKEY statement RKEY

    LPAREN          shift and go to state 42


state 15

    (36) while_stmt -> WHILE . LPAREN expression RPAREN LKEY statement RKEY

    LPAREN          shift and go to state 43


state 16

    (37) while_stmt -> DO . LKEY statement RKEY WHILE LPAREN expression RPAREN FINISH

    LKEY            shift and go to state 44


state 17

    (43) declare_reg -> type . ID
    (44) declare_assign_reg -> type . ID ASSIGN expression

    ID              shift and go to state 45


state 18

    (45) assign_reg -> ID . ASSIGN expression

    ASSIGN          shift and go to state 46


state 19

    (46) if_cond -> IF . LPAREN expression RPAREN LKEY statement RKEY

    LPAREN          shift and go to state 47


state 20

    (39) type -> BOOL .

    ID              reduce using rule 39 (type -> BOOL .)


state 21

    (40) type -> INT .

    ID              reduce using rule 40 (type -> INT .)


state 22

    (41) type -> FLOAT .

    ID              reduce using rule 41 (type -> FLOAT .)


state 23

    (42) type -> STRING .

    ID              reduce using rule 42 (type -> STRING .)


state 24

    (2) statement -> print_stmt FINISH . statement
    (2) statement -> . print_stmt FINISH statement
    (3) statement -> . register_stmt FINISH statement
    (4) statement -> . condition_stmt statement
    (5) statement -> . for_stmt statement
    (6) statement -> . while_stmt statement
    (7) statement -> . empty
    (30) print_stmt -> . PRINT expression
    (31) register_stmt -> . declare_reg
    (32) register_stmt -> . declare_assign_reg
    (33) register_stmt -> . assign_reg
    (34) condition_stmt -> . if_cond elif_cond else_cond
    (35) for_stmt -> . FOR LPAREN declare_assign_reg FINISH expression FINISH assign_reg RPAREN LKEY statement RKEY
    (36) while_stmt -> . WHILE LPAREN expression RPAREN LKEY statement RKEY
    (37) while_stmt -> . DO LKEY statement RKEY WHILE LPAREN expression RPAREN FINISH
    (38) empty -> .
    (43) declare_reg -> . type ID
    (44) declare_assign_reg -> . type ID ASSIGN expression
    (45) assign_reg -> . ID ASSIGN expression
    (46) if_cond -> . IF LPAREN expression RPAREN LKEY statement RKEY
    (39) type -> . BOOL
    (40) type -> . INT
    (41) type -> . FLOAT
    (42) type -> . STRING

    PRINT           shift and go to state 9
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    DO              shift and go to state 16
    $end            reduce using rule 38 (empty -> .)
    RKEY            reduce using rule 38 (empty -> .)
    ID              shift and go to state 18
    IF              shift and go to state 19
    BOOL            shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    STRING          shift and go to state 23

    print_stmt                     shift and go to state 3
    statement                      shift and go to state 48
    register_stmt                  shift and go to state 4
    condition_stmt                 shift and go to state 5
    for_stmt                       shift and go to state 6
    while_stmt                     shift and go to state 7
    empty                          shift and go to state 8
    declare_reg                    shift and go to state 10
    declare_assign_reg             shift and go to state 11
    assign_reg                     shift and go to state 12
    if_cond                        shift and go to state 13
    type                           shift and go to state 17

state 25

    (3) statement -> register_stmt FINISH . statement
    (2) statement -> . print_stmt FINISH statement
    (3) statement -> . register_stmt FINISH statement
    (4) statement -> . condition_stmt statement
    (5) statement -> . for_stmt statement
    (6) statement -> . while_stmt statement
    (7) statement -> . empty
    (30) print_stmt -> . PRINT expression
    (31) register_stmt -> . declare_reg
    (32) register_stmt -> . declare_assign_reg
    (33) register_stmt -> . assign_reg
    (34) condition_stmt -> . if_cond elif_cond else_cond
    (35) for_stmt -> . FOR LPAREN declare_assign_reg FINISH expression FINISH assign_reg RPAREN LKEY statement RKEY
    (36) while_stmt -> . WHILE LPAREN expression RPAREN LKEY statement RKEY
    (37) while_stmt -> . DO LKEY statement RKEY WHILE LPAREN expression RPAREN FINISH
    (38) empty -> .
    (43) declare_reg -> . type ID
    (44) declare_assign_reg -> . type ID ASSIGN expression
    (45) assign_reg -> . ID ASSIGN expression
    (46) if_cond -> . IF LPAREN expression RPAREN LKEY statement RKEY
    (39) type -> . BOOL
    (40) type -> . INT
    (41) type -> . FLOAT
    (42) type -> . STRING

    PRINT           shift and go to state 9
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    DO              shift and go to state 16
    $end            reduce using rule 38 (empty -> .)
    RKEY            reduce using rule 38 (empty -> .)
    ID              shift and go to state 18
    IF              shift and go to state 19
    BOOL            shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    STRING          shift and go to state 23

    register_stmt                  shift and go to state 4
    statement                      shift and go to state 49
    print_stmt                     shift and go to state 3
    condition_stmt                 shift and go to state 5
    for_stmt                       shift and go to state 6
    while_stmt                     shift and go to state 7
    empty                          shift and go to state 8
    declare_reg                    shift and go to state 10
    declare_assign_reg             shift and go to state 11
    assign_reg                     shift and go to state 12
    if_cond                        shift and go to state 13
    type                           shift and go to state 17

state 26

    (4) statement -> condition_stmt statement .

    $end            reduce using rule 4 (statement -> condition_stmt statement .)
    RKEY            reduce using rule 4 (statement -> condition_stmt statement .)


state 27

    (5) statement -> for_stmt statement .

    $end            reduce using rule 5 (statement -> for_stmt statement .)
    RKEY            reduce using rule 5 (statement -> for_stmt statement .)


state 28

    (6) statement -> while_stmt statement .

    $end            reduce using rule 6 (statement -> while_stmt statement .)
    RKEY            reduce using rule 6 (statement -> while_stmt statement .)


state 29

    (30) print_stmt -> PRINT expression .
    (8) expression -> expression . AND expression
    (9) expression -> expression . OR expression
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . MULT expression
    (13) expression -> expression . DIV expression
    (14) expression -> expression . EXP expression
    (15) expression -> expression . EQUALS expression
    (16) expression -> expression . NOT_EQUALS expression
    (17) expression -> expression . EQ_MORE expression
    (18) expression -> expression . EQ_LESS expression
    (19) expression -> expression . MORE expression
    (20) expression -> expression . LESS expression

    FINISH          reduce using rule 30 (print_stmt -> PRINT expression .)
    AND             shift and go to state 50
    OR              shift and go to state 51
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53
    MULT            shift and go to state 54
    DIV             shift and go to state 55
    EXP             shift and go to state 56
    EQUALS          shift and go to state 57
    NOT_EQUALS      shift and go to state 58
    EQ_MORE         shift and go to state 59
    EQ_LESS         shift and go to state 60
    MORE            shift and go to state 61
    LESS            shift and go to state 62


state 30

    (29) expression -> MINUS . expression
    (8) expression -> . expression AND expression
    (9) expression -> . expression OR expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression MULT expression
    (13) expression -> . expression DIV expression
    (14) expression -> . expression EXP expression
    (15) expression -> . expression EQUALS expression
    (16) expression -> . expression NOT_EQUALS expression
    (17) expression -> . expression EQ_MORE expression
    (18) expression -> . expression EQ_LESS expression
    (19) expression -> . expression MORE expression
    (20) expression -> . expression LESS expression
    (21) expression -> . ID
    (22) expression -> . FLOAT_VAL
    (23) expression -> . INT_VAL
    (24) expression -> . STR_VAL
    (25) expression -> . bool_val
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . MINUS expression
    (26) bool_val -> . TRUE
    (27) bool_val -> . FALSE

    ID              shift and go to state 31
    FLOAT_VAL       shift and go to state 32
    INT_VAL         shift and go to state 33
    STR_VAL         shift and go to state 34
    LPAREN          shift and go to state 36
    MINUS           shift and go to state 30
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 63
    bool_val                       shift and go to state 35

state 31

    (21) expression -> ID .

    AND             reduce using rule 21 (expression -> ID .)
    OR              reduce using rule 21 (expression -> ID .)
    PLUS            reduce using rule 21 (expression -> ID .)
    MINUS           reduce using rule 21 (expression -> ID .)
    MULT            reduce using rule 21 (expression -> ID .)
    DIV             reduce using rule 21 (expression -> ID .)
    EXP             reduce using rule 21 (expression -> ID .)
    EQUALS          reduce using rule 21 (expression -> ID .)
    NOT_EQUALS      reduce using rule 21 (expression -> ID .)
    EQ_MORE         reduce using rule 21 (expression -> ID .)
    EQ_LESS         reduce using rule 21 (expression -> ID .)
    MORE            reduce using rule 21 (expression -> ID .)
    LESS            reduce using rule 21 (expression -> ID .)
    FINISH          reduce using rule 21 (expression -> ID .)
    RPAREN          reduce using rule 21 (expression -> ID .)


state 32

    (22) expression -> FLOAT_VAL .

    AND             reduce using rule 22 (expression -> FLOAT_VAL .)
    OR              reduce using rule 22 (expression -> FLOAT_VAL .)
    PLUS            reduce using rule 22 (expression -> FLOAT_VAL .)
    MINUS           reduce using rule 22 (expression -> FLOAT_VAL .)
    MULT            reduce using rule 22 (expression -> FLOAT_VAL .)
    DIV             reduce using rule 22 (expression -> FLOAT_VAL .)
    EXP             reduce using rule 22 (expression -> FLOAT_VAL .)
    EQUALS          reduce using rule 22 (expression -> FLOAT_VAL .)
    NOT_EQUALS      reduce using rule 22 (expression -> FLOAT_VAL .)
    EQ_MORE         reduce using rule 22 (expression -> FLOAT_VAL .)
    EQ_LESS         reduce using rule 22 (expression -> FLOAT_VAL .)
    MORE            reduce using rule 22 (expression -> FLOAT_VAL .)
    LESS            reduce using rule 22 (expression -> FLOAT_VAL .)
    FINISH          reduce using rule 22 (expression -> FLOAT_VAL .)
    RPAREN          reduce using rule 22 (expression -> FLOAT_VAL .)


state 33

    (23) expression -> INT_VAL .
